--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,8 @@ inputs:
 outputs:
   release_id:
     description: Returns the ID of the release.
+  tag:
+    description: The tag associated with the release.
 runs:
   using: "node12"
   main: "index.js"
