Added support for removing orhpan tags, even if there is no associated release.

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,9 @@ inputs:
   tag:
     description: The tag associated with the release.
     required: false
+  always_delete_tag:
+    description: If the release does not exist but the tag does, setting this to true will remove the tag.
+    required: false
 outputs:
   release_id:
     description: Returns the ID of the release.
