--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "Automatically create a tag whenever the version changes in package.json",
   "main": "lib/main.js",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
