--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "esbuild --bundle ./src/main.js --platform=node --outdir=dist"
+    "prepare": "esbuild --bundle ./index.js --platform=node --outdir=dist"
   },
   "repository": {
     "type": "git",
