--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "rimraf dist && esbuild --bundle ./index.js --format=esm --external:@actions/core --external:@actions/github --outdir=dist"
+    "prepare": "rimraf dist && esbuild --bundle ./index.js --format=esm --platform=node --outdir=dist"
   },
   "repository": {
     "type": "git",
